<resources>
    <string name="app_name">HireHub</string>
    <string name="tv_log_in">Log in</string>
    <string name="sw_log_in_as_company">Register as Company</string>
    <string name="et_input_your_username">Input your username</string>
    <string name="et_input_your_password">Input your password</string>
    <string name="btn_log_in">Log in</string>
    <string name="tv_no_accont">You don\'t have an account?</string>
    <string name="tv_register">Register</string>
    <string name="tv_username">Your username</string>
    <string name="tv_password">Your password</string>
    <string name="register">Register</string>
    <string name="et_reg_username">Choose your username</string>
    <string name="et_reg_name">Choose your name</string>
    <string name="et_offer_name">Offer name</string>
    <string name="et_reg_pwd">Set your password</string>
    <string name="tv_accont">You already have an account?</string>
    <string name="tv_name">Your name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>